added Story Cub AI

--- a/index.html
+++ b/index.html
@@ -158,6 +158,16 @@
                     <a href="DontBLate-PrivacyPolicy.html">Privacy Policy</a> | <a href="DontBLate-TermsOfService.html">Terms of Service</a>
                 </div>
             </div>
+            <!-- Story Cub AI App Card -->
+            <div class="app-card">
+                <img src="pics/logoStoryCubAI.png" alt="Story Cub AI Logo">
+                <h3>Story Cub AI</h3>
+                <p>Create and enjoy AI-generated stories for children.</p>
+                <a href="#" class="learn-more" data-app="story-cub-ai">Learn More</a>
+                <div class="policy-links">
+                    <a href="StoryCubAI-PrivacyPolicy.html">Privacy Policy</a> | <a href="StoryCubAI-TermsOfService.html">Terms of Service</a>
+                </div>
+            </div>
             <!-- Story Bear AI App Card -->
             <div class="app-card">
                 <img src="pics/logoStoryBearAI.png" alt="Story Bear AI Logo">
@@ -184,7 +194,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Ian Murnane. All rights reserved.</p>
+    <p>&copy; 2024-2025 Ian Murnane. All rights reserved.</p>
     <p><a href="mailto:ianmurnanede@gmail.com">Contact Us</a></p>
 </footer>
 
@@ -208,6 +218,16 @@
                         <li>Customizable reminders</li>
                         <li>Countdown timers</li>
                         <li>User-friendly interface</li>
+                    </ul>
+                `;
+            } else if (app === 'story-cub-ai') {
+                content = `
+                    <h2>Story Cub AI</h2>
+                    <p>Story Cub AI uses cutting-edge artificial intelligence to generate and read unique stories. It offers an engaging and fun experience for younger users.</p>
+                    <ul>
+                        <li>AI-generated story creation</li>
+                        <li>Interactive story reading</li>
+                        <li>Personalized content recommendations</li>
                     </ul>
                 `;
             } else if (app === 'story-bear-ai') {
