--- a/StoryCubAI-TermsOfService.html
+++ b/StoryCubAI-TermsOfService.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Story Bear AI</title>
+    <title>Terms of Service - Story Cub AI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,14 +55,14 @@
 <body>
     <div class="container">
         <h1>Terms of Service</h1>
-        <p class="last-updated">Last Updated: 19 August 2024</p>
-        <p>Welcome to Story Bear AI by App Arcade Studios. By using our app, you agree to these Terms of Service. Please read them carefully.</p>
+        <p class="last-updated">Last Updated: 18 December 2024</p>
+        <p>Welcome to Story Cub AI by App Arcade Studios. By using our app, you agree to these Terms of Service. Please read them carefully.</p>
 
         <h2>1. Acceptance of Terms</h2>
-        <p>By accessing or using Story Bear AI, you agree to be bound by these Terms of Service and our Privacy Policy. If you do not agree, please do not use our app.</p>
+        <p>By accessing or using Story Cub AI, you agree to be bound by these Terms of Service and our Privacy Policy. If you do not agree, please do not use our app.</p>
 
         <h2>2. Description of Service</h2>
-        <p>Story Bear AI uses artificial intelligence to generate and read stories for users. The service is provided "as is" and "as available" without warranties of any kind.</p>
+        <p>Story Cub AI uses artificial intelligence to generate and read stories for users. The service is provided "as is" and "as available" without warranties of any kind.</p>
 
         <h2>3. User Accounts</h2>
         <ul>
@@ -73,19 +73,19 @@
 
         <h2>4. Use of the App</h2>
         <ul>
-            <li><strong>Lawful Use:</strong> You agree to use Story Bear AI only for lawful purposes and in accordance with these Terms of Service.</li>
+            <li><strong>Lawful Use:</strong> You agree to use Story Cub AI only for lawful purposes and in accordance with these Terms of Service.</li>
             <li><strong>Prohibited Activities:</strong> You agree not to use the app for any illegal activities or to harm or exploit other users. This includes, but is not limited to, the creation of harmful or offensive content.</li>
         </ul>
 
         <h2>5. Intellectual Property</h2>
         <ul>
-            <li><strong>Ownership:</strong> All content, features, and functionality on the app are owned by Story Bear AI or its licensors and are protected by intellectual property laws.</li>
+            <li><strong>Ownership:</strong> All content, features, and functionality on the app are owned by Story Cub AI or its licensors and are protected by intellectual property laws.</li>
             <li><strong>License:</strong> We grant you a limited, non-exclusive, non-transferable, and revocable license to use the app for personal, non-commercial purposes.</li>
         </ul>
 
         <h2>6. User-Generated Content</h2>
         <ul>
-            <li><strong>Responsibility:</strong> You are responsible for any content you create or share using Story Bear AI.</li>
+            <li><strong>Responsibility:</strong> You are responsible for any content you create or share using Story Cub AI.</li>
             <li><strong>Rights:</strong> By creating or sharing content, you grant us a worldwide, non-exclusive, royalty-free license to use, reproduce, and display the content in connection with the app.</li>
         </ul>
 
@@ -93,7 +93,7 @@
         <p>We reserve the right to suspend or terminate your account and access to the app at our discretion, without notice, if you violate these Terms of Service.</p>
 
         <h2>8. Limitation of Liability</h2>
-        <p>Story Bear AI shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or related to your use of the app.</p>
+        <p>Story Cub AI shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising out of or related to your use of the app.</p>
 
         <h2>9. Changes to the Terms</h2>
         <p>We may update these Terms of Service from time to time. The latest version will be available in the app and will take effect immediately upon posting.</p>
