--- a/ATMRewards-PrivacyPolicy.html
+++ b/ATMRewards-PrivacyPolicy.html
@@ -35,6 +35,13 @@
         p {
             margin: 10px 0;
         }
+        ul {
+            margin: 10px 0;
+            padding-left: 20px;
+        }
+        li {
+            margin: 5px 0;
+        }
         .last-updated {
             font-size: 0.9em;
             color: #888;
@@ -48,31 +55,51 @@
 <body>
 <div class="container">
     <h1>Privacy Policy</h1>
-    <p class="last-updated">Last Updated: 19 March 2025</p>
+    <p class="last-updated">Last Updated: 31 March 2025</p>
     <p>Welcome to ATM Rewards. Your privacy is important to us. This Privacy Policy explains how we handle your information when you use our app.</p>
 
     <h2>1. App Description</h2>
-    <p>ATM Rewards allows users to earn rewards through various activities while keeping track of their account balance.</p>
+    <p>ATM Rewards is a play-to-earn app where users can unlock cards, watch ads for bonuses, and redeem in-game rewards. The app provides an engaging way to earn rewards through gameplay and interactions.</p>
 
     <h2>2. Information Collection</h2>
-    <p>We do not collect any personal information beyond what is necessary for app functionality. The only user data collected is a Google login to maintain user accounts and their balance.</p>
+    <p>ATM Rewards may collect certain user information to enhance app functionality and provide a seamless experience. This may include:</p>
+    <ul>
+        <li>Device information (such as device model and OS version).</li>
+        <li>Usage data (such as interactions within the app).</li>
+        <li>Advertising identifiers to serve relevant ads.</li>
+    </ul>
 
     <h2>3. Purpose of Data Collection</h2>
-    <p>The Google login is used solely to associate user accounts with their balances and ensure secure access.</p>
+    <p>The data collected is used for:</p>
+    <ul>
+        <li>Improving app functionality and user experience.</li>
+        <li>Providing personalized ads.</li>
+        <li>Tracking referral rewards and user engagement.</li>
+    </ul>
 
-    <h2>4. Advertisements</h2>
-    <p>Our app may display advertisements to support its operation. Third-party ad networks may collect anonymized usage data for ad targeting purposes.</p>
+    <h2>4. Data Storage and Security</h2>
+    <p>We take reasonable security measures to protect user data from unauthorized access or disclosure.</p>
 
     <h2>5. Data Sharing</h2>
-    <p>We do not share any user data with third parties. The Google login is used exclusively within the app for authentication and balance tracking.</p>
+    <p>We do not sell or share your personal data with third parties, except in the following cases:</p>
+    <ul>
+        <li>For advertising and analytics purposes with trusted partners.</li>
+        <li>To comply with legal obligations if required by law.</li>
+    </ul>
 
-    <h2>6. Secure Data Handling</h2>
-    <p>We prioritize security and do not store sensitive personal information. Your account balance is linked securely to your Google account.</p>
+    <h2>6. User Rights</h2>
+    <p>Users have the right to request access, correction, or deletion of their data. You can contact us for any data-related requests.</p>
 
-    <h2>7. Changes to the Privacy Policy</h2>
+    <h2>7. Cookies and Tracking Technologies</h2>
+    <p>ATM Rewards may use cookies and similar tracking technologies to enhance the user experience and improve advertising relevance.</p>
+
+    <h2>8. Children’s Privacy</h2>
+    <p>ATM Rewards is intended for users aged 18 and above. We do not knowingly collect personal data from children under 18.</p>
+
+    <h2>9. Changes to the Privacy Policy</h2>
     <p>This Privacy Policy may be updated as necessary. The latest version will always be available here.</p>
 
-    <h2>8. Contact Information</h2>
+    <h2>10. Contact Information</h2>
     <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
     <p class="contact-info">ianmurnanede@gmail.com<br>Düsseldorf, Germany</p>
 </div>
