--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-    <h1>AppArcade Studios</h1>
+    <h1><i class="fas fa-home"></i> AppArcade Studios</h1>
 </header>
 <main>
     <div id="apps-container">
