updated email address

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </main>
 <footer>
     <p>&copy; 2024-2025 Ian Murnane. All rights reserved.</p>
-    <p><a href="mailto:ianmurnanede@gmail.com">Contact Us</a></p>
+    <p><a href="mailto:support@apparcadestudios.com">support@apparcadestudios.com</a></p>
 </footer>
 <script src="script.js"></script>
 </body>
