--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 </head>
 <body>
 <header>
-    <h1><i class="fas fa-home"></i> AppArcade Studios</h1>
+    <div class="header-content">
+        <img src="pics/arcade-machine-game-icon.png" alt="AppArcade Icon" class="header-icon">
+        <h1>AppArcade Studios</h1>
+    </div>
 </header>
 <main>
     <div id="apps-container">
