--- a/policies/privacy/storybear.html
+++ b/policies/privacy/storybear.html
@@ -50,56 +50,63 @@
             margin-top: 20px;
             font-weight: bold;
         }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Privacy Policy</h1>
-        <p class="last-updated">Last Updated: 19 August 2024</p>
-        <p>Welcome to Story Bear AI by AppArcade Studios. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our app.</p>
+<div class="container">
+    <h1>Privacy Policy</h1>
+    <p class="last-updated">Last Updated: 9 May 2025</p>
+    <p>Welcome to Story Bear AI by AppArcade Studios. Your privacy is important to us. This Privacy Policy explains how we collect, use, and protect your information when you use our app.</p>
 
-        <h2>1. App Description</h2>
-        <p>Story Bear AI uses artificial intelligence to generate and read user stories, providing a creative and engaging experience.</p>
+    <h2>1. App Description</h2>
+    <p>Story Bear AI uses artificial intelligence to generate and read user stories, providing a creative and engaging experience.</p>
 
-        <h2>2. Information Collection</h2>
-        <p>We collect minimal personal information necessary for user login, such as your email address or Google account profile.</p>
+    <h2>2. Information Collection</h2>
+    <p>We collect minimal personal information necessary for user login, such as your email address or Google account profile.</p>
 
-        <h2>3. Non-Personal Information Collection</h2>
-        <p>We collect non-personal information such as error logs, app usage data, and content requests to help us improve our services.</p>
+    <h2>3. Non-Personal Information Collection</h2>
+    <p>We collect non-personal information such as error logs, app usage data, and content requests to help us improve our services.</p>
 
-        <h2>4. Purpose of Data Collection</h2>
-        <p>The information we collect is used to enhance our services and ensure reliability.</p>
+    <h2>4. Purpose of Data Collection</h2>
+    <p>The information we collect is used to enhance our services, improve performance, and ensure reliability.</p>
 
-        <h2>5. Data Storage and Security</h2>
-        <ul>
-            <li><strong>Social Login Data:</strong> Handled by the respective provider (e.g., Google).</li>
-            <li><strong>Error and Usage Data:</strong> Securely managed by AWS (Amazon Web Services).</li>
-        </ul>
+    <h2>5. Data Storage and Security</h2>
+    <ul>
+        <li><strong>Social Login Data:</strong> Handled by the respective provider (e.g., Google).</li>
+        <li><strong>Error and Usage Data:</strong> Securely managed by AWS (Amazon Web Services).</li>
+    </ul>
 
-        <h2>6. Data Sharing</h2>
-        <p>We do not share your personal data with any third parties. Non-personal, anonymized data may be used for internal analysis and to improve the app.</p>
+    <h2>6. Data Sharing</h2>
+    <p>We do not share your personal data with any third parties. Non-personal, anonymized data may be used for internal analysis and to improve the app.</p>
 
-        <h2>7. Secure Data Handling</h2>
-        <p>All data is encrypted both in transit and at rest using industry-standard encryption protocols. Access to personal data is limited to authorized personnel only.</p>
+    <h2>7. Secure Data Handling</h2>
+    <p>All data is encrypted both in transit and at rest using industry-standard encryption protocols. Access to personal data is limited to authorized personnel only.</p>
 
-        <h2>8. Data Retention and Deletion</h2>
-        <p>Personal data is retained only as long as necessary to provide our services. You can request the deletion of your data at any time by contacting us through the provided channels. Once your data is deleted, it cannot be recovered.</p>
+    <h2>8. Data Retention and Deletion</h2>
+    <p>Personal data is retained only as long as necessary to provide our services. You can request the deletion of your data at any time through the app settings (if available) or by contacting us at <a href="mailto:support@apparcadestudios.com">support@apparcadestudios.com</a>. Once your data is deleted, it cannot be recovered. We will complete the deletion process within 30 days of receiving your request.</p>
 
-        <h2>9. User Rights</h2>
-        <p>You have the right to request access to the personal data we hold about you and to request its correction or deletion. Contact us using the details below to exercise these rights.</p>
+    <h2>9. User Rights</h2>
+    <p>You have the right to request access to, correction of, or deletion of the personal data we hold about you. You can also request a copy of your data before deletion. To exercise these rights, please contact us at the email provided below.</p>
 
-        <h2>10. Cookies and Tracking Technologies</h2>
-        <p>We do not use cookies or other tracking technologies. The only tracking data collected is the anonymous IP address used for server communication.</p>
+    <h2>10. Cookies and Tracking Technologies</h2>
+    <p>We do not use cookies or other tracking technologies. The only tracking data collected is the anonymous IP address used for server communication.</p>
 
-        <h2>11. Children’s Privacy</h2>
-        <p>Story Bear AI does not collect information from users other than what is necessary for login services. We do not specifically target or collect data from children under 13.</p>
+    <h2>11. Children’s Privacy</h2>
+    <p>Story Bear AI does not knowingly collect information from users under 13. If you believe a child under 13 has provided us with personal data, please contact us, and we will promptly delete it.</p>
 
-        <h2>12. Changes to the Privacy Policy</h2>
-        <p>This Privacy Policy may be updated as necessary. The latest version will always be available here.</p>
+    <h2>12. Changes to the Privacy Policy</h2>
+    <p>This Privacy Policy may be updated periodically. The latest version will always be available here. We encourage you to review this policy regularly to stay informed of any changes.</p>
 
-        <h2>13. Contact Information</h2>
-        <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
-        <p class="contact-info">ianmurnanede@gmail.com<br>Düsseldorf, Germany</p>
-    </div>
+    <h2>13. Contact Information</h2>
+    <p>If you have any questions or concerns about this Privacy Policy, please contact us at:</p>
+    <p class="contact-info"><a href="mailto:support@apparcadestudios.com">support@apparcadestudios.com</a><br>Düsseldorf, Germany</p>
+</div>
 </body>
 </html>
