updated atmrewards tos

--- a/policies/tos/atmrewards.html
+++ b/policies/tos/atmrewards.html
@@ -55,7 +55,7 @@
 <body>
 <div class="container">
     <h1>Terms of Service</h1>
-    <p class="last-updated">Last Updated: 8 May 2025</p>
+    <p class="last-updated">Last Updated: 31 Aug 2025</p>
     <p>Welcome to ATM Rewards by App Arcade Studios. By using our app, you agree to these Terms of Service. Please read them carefully.</p>
 
     <h2>1. User Accounts</h2>
@@ -63,6 +63,8 @@
         <li><strong>Registration:</strong> Users must register with a valid email address or supported login method.</li>
         <li><strong>Account Activity:</strong> Accounts must be logged into at least once within 30 days to remain active. Inactive accounts will be removed in line with our data handling policy.</li>
         <li><strong>Responsibility:</strong> Users are responsible for maintaining the confidentiality of their login credentials.</li>
+        <li><strong>Device Policy:</strong> Only one account may be used per device. Any points earned from using multiple accounts on a single device are considered invalid.</li>
+        <li><strong>Usage Policy:</strong> The application must be used as intended. Any points earned through unintended use are invalid.</li>
     </ul>
 
     <h2>2. Data Handling Policy</h2>
