updated atm rewards tos

--- a/policies/tos/atmrewards.html
+++ b/policies/tos/atmrewards.html
@@ -65,6 +65,9 @@
         <li><strong>Responsibility:</strong> Users are responsible for maintaining the confidentiality of their login credentials.</li>
         <li><strong>Device Policy:</strong> Only one account may be used per device. Any points earned from using multiple accounts on a single device are considered invalid.</li>
         <li><strong>Usage Policy:</strong> The application must be used as intended. Any points earned through unintended use are invalid.</li>
+        <li><strong>Payments:</strong> Payments will be issued via a third party provider to the nearest $5 amount earned.</strong></li>
+        <li><strong>Payment Responsibility:</strong> Payments are issued to the email provided. The user has complete responsibility of this payment once sent. We may be unable to recover any lost, shared or stolen payment.</li>
+        <li><strong>VPN Usage:</strong> VPNs are not allowed to be used with this service. Where a VPN is detected, the accounts payment tier may be reduced.</li>
     </ul>
 
     <h2>2. Data Handling Policy</h2>
